--- a/src/app/components/card-form/card-form.component.css
+++ b/src/app/components/card-form/card-form.component.css
@@ -83,12 +83,12 @@ mat-select {
 .button input {
     width: 150px;
     height: 32px;
-    background-color: #38b0b4;
+    background-color: #1C6758;
     border: none;
     color: white;
     letter-spacing: 1.5px;
     font-size: 0.9em;
-    font-weight: bold;
+    font-weight: 500;
     cursor: pointer;
 }
 .button input:last-child {
