--- a/src/app/pages/create-account/create-account.component.css
+++ b/src/app/pages/create-account/create-account.component.css
@@ -25,7 +25,7 @@
     width: 40%;
     height: 100%;
     text-align: center;
-    background-color: #38b0b4;
+    background-color: #1C6758;
     color: white;
     border-radius: 0px 10px 10px 0px;
     letter-spacing: 1px;
@@ -59,7 +59,7 @@
 .inputs h2 {
     margin-top: -30px;
     margin-bottom: 30px;
-    color: #38b0b4;
+    color: #1C6758;
     font-size: 2.5em;
 }
 .inputs p {
@@ -89,12 +89,12 @@
 .buttons button {
     width: 150px;
     height: 32px;
-    background-color: #38b0b4;
+    background-color: #1C6758;
     border: none;
     color: white;
     letter-spacing: 1.5px;
     font-size: 0.9em;
-    font-weight: bold;
+    font-weight: 500;
 }
 
 .validation  {
