--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -25,7 +25,7 @@
     width: 40%;
     height: 100%;
     text-align: center;
-    background-color: #38b0b4;
+    background-color: #1C6758;
     color: white;
     border-radius: 10px 0px 0px 10px;
     letter-spacing: 1px;
@@ -55,7 +55,7 @@
 .inputs h2 {
     margin-top: -50px;
     margin-bottom: 50px;
-    color: #38b0b4;
+    color: #1C6758;
     font-size: 2.5em;
 }
 .inputs p {
@@ -85,12 +85,12 @@
 .buttons button {
     width: 150px;
     height: 32px;
-    background-color: #38b0b4;
+    background-color: #1C6758;
     border: none;
     color: white;
     letter-spacing: 1.5px;
     font-size: 0.9em;
-    font-weight: bold;
+    font-weight: 500;
     cursor: pointer;
 }
 
