--- a/src/app/pages/view-card/view-card.component.css
+++ b/src/app/pages/view-card/view-card.component.css
@@ -1,16 +1,17 @@
-.container {  
+.container {
     width: 100vw;
     height: 85vh;
-    display: flex; 
+    display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column; 
+    flex-direction: column;
     background-color: white;
-    
+
 }
-.card{
+
+.card {
     background-color: #ececec;
-    width: 60%;  
+    width: 70%;
     padding: 1rem;
     border-radius: .5rem;
     box-shadow: 2px 3px 5px #52525252;
@@ -21,7 +22,7 @@
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-between; 
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -44,16 +45,17 @@ button:hover {
     font-size: 2em;
     color: #535353;
 }
-.viewPort{
+
+.viewPort {
     width: 100%;
     height: 400px;
 }
 
-.conteinerContent{
+.conteinerContent {
     width: 100%;
     display: flex;
-    justify-content: space-around;   
-    
+    justify-content: space-around;
+
 }
 
 .title h1 {
@@ -62,49 +64,52 @@ button:hover {
     font-weight: 500;
     color: #020202;
 }
+
 .title p {
     margin-left: 5px;
 }
 
-.header h3{
+.header h3 {
     margin-bottom: -5px;
     font-weight: 500;
     color: #6e6e6e;
     font-size: 1em;
 }
-.header p{
-  background-color: #ebebeb;
-  width: 90px;
-  text-align: center;
+
+.header p {
+    background-color: #ebebeb;
+    width: 90px;
+    text-align: center;
 }
 
-.addContent {   
-    display: flex;        
+.addContent {
+    display: flex;
     flex-direction: column;
     width: 25%;
 }
 
-.addContent h3{   
+.addContent h3 {
     margin-bottom: -5px;
     font-weight: 500;
     color: #6e6e6e;
 }
 
-.addContent button {   
+.addContent button {
     margin-top: 5px;
     height: 30px;
     border: none;
     outline: 0;
-    cursor:  pointer;
+    cursor: pointer;
     background-color: white;
 }
-.addContent button:hover {   
+
+.addContent button:hover {
     box-shadow: 2px 3px 5px #919191;
 }
 
 
-.vewContent{
-    display: flex;   
+.vewContent {
+    display: flex;
     flex-direction: column;
     width: 60%;
 }
@@ -112,11 +117,12 @@ button:hover {
 .formGroup {
     margin-bottom: 10px;
 }
-.formGroup h2{
-    margin-bottom:  -3px;
+
+.formGroup h2 {
+    margin-bottom: -3px;
 }
 
-.formGroup .descriptionText{
+.formGroup .descriptionText {
     width: 100%;
     height: 80px;
     background-color: white;
@@ -130,7 +136,7 @@ button:hover {
 .comment {
     height: 40px;
     width: 100%;
-    background-color:white;
+    background-color: white;
     border: none;
     outline: 0;
     padding-left: 5px;
@@ -138,36 +144,37 @@ button:hover {
     margin-bottom: 5px;
 }
 
-.buttons > button {
+.buttons>button {
     padding: 3px;
-    border-radius: 2px;    
+    border-radius: 2px;
     border: none;
     outline: 0;
-    cursor:  pointer;
+    cursor: pointer;
     background-color: white;
 
 }
 
-.buttonsComment  button {
+.buttonsComment button {
     padding: 3px;
-    border-radius: 2px;    
+    border-radius: 2px;
     border: none;
     outline: 0;
-    cursor:  pointer;
+    cursor: pointer;
     background-color: white;
     font-size: 0.8em;
     color: #03658c;
 }
-.buttonsComment > button:last-child {
-   margin-left: 5px;
-   color: #8c0337;
+
+.buttonsComment>button:last-child {
+    margin-left: 5px;
+    color: #8c0337;
 }
 
-.buttonsComment > fa-icon {
+.buttonsComment>fa-icon {
     font-size: 0.8em;
 }
 
-.formGroup:last-child{
+.formGroup:last-child {
     margin-top: 30px;
 }
 
@@ -180,7 +187,7 @@ button:hover {
     margin-left: 10px;
 }
 
-.member button  {    
+.member button {
     margin-top: 10px;
     margin-left: 5px;
     padding-left: 5px;
@@ -194,8 +201,8 @@ button:hover {
 
 }
 
-.member button:hover  { 
-    background-color:  rgb(95, 158, 129);
+.member button:hover {
+    background-color: rgb(95, 158, 129);
 }
 
 .memberesConteiner {
@@ -206,12 +213,13 @@ button:hover {
 
 }
 
-.buttom-member{
+.buttom-member {
     display: flex;
     flex-direction: row;
     justify-content: center;
 }
-.buttom-member button:last-child{
+
+.buttom-member button:last-child {
     /* margin-left: 0px; */
     background-color: white;
     font-size: 1em;
@@ -224,6 +232,7 @@ button:hover {
     padding: 0;
     color: #020202;
 }
+
 .buttom-member button:last-child:hover {
     /* margin-left: 0px; */
     color: rgb(184, 114, 114);
@@ -247,7 +256,8 @@ button:hover {
     font-size: 1em;
     font-weight: 500;
 }
-.commentUsers > textarea {
+
+.commentUsers>textarea {
     width: 100%;
     background-color: #fff;
     border: 1px solid rgba(90, 172, 90, 0.226);
@@ -268,8 +278,9 @@ button:hover {
     display: flex;
     align-items: center;
 }
+
 .btnEditDesc button {
-    margin-left:  10px;
+    margin-left: 10px;
     border: 0;
     outline: none;
     padding: 5px;
@@ -286,20 +297,22 @@ button:hover {
    
 } */
 
-.checkbox{
+.checkbox {
     width: 25px;
     background-color: rgb(93, 173, 93);
 }
 
- 
+
 ::-webkit-scrollbar {
     width: 6px;
-} 
+}
+
 ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px rgba(2, 68, 13, 0.3); 
-} 
+    box-shadow: inset 0 0 6px rgba(2, 68, 13, 0.3);
+}
+
 ::-webkit-scrollbar-thumb {
-    box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
 
@@ -312,7 +325,7 @@ button:hover {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
-   
+
 }
 
 /**
@@ -321,69 +334,71 @@ button:hover {
 /**
  * Avatar
  ---------------------------*/
- .comment-avatar {
-	width: 50px;
-	height: 50px;
-	position: relative;
-	z-index: 99;
-	float: left;
-	border: 3px solid #FFF;
-	-webkit-border-radius: 4px;
-	-moz-border-radius: 4px;
-	border-radius: 4px;
-	-webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-	-moz-box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-	box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-	overflow: hidden;
+.comment-avatar {
+    width: 50px;
+    height: 50px;
+    position: relative;
+    z-index: 99;
+    float: left;
+    border: 3px solid #FFF;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
 }
 
 .comment-avatar img {
-	width: 100%;
-	height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 .reply-list .comment-avatar {
-	width: 50px;
-	height: 50px;
+    width: 50px;
+    height: 50px;
 }
 
 .comment-main-level:after {
-	content: '';
-	width: 0;
-	height: 0;
-	display: block;
-	clear: both;
+    content: '';
+    width: 0;
+    height: 0;
+    display: block;
+    clear: both;
 }
+
 /**
  * Caja del Comentario
  ---------------------------*/
 .comment-box {
-	width: 85%;
-	float: right;
-	position: relative;
+    width: 85%;
+    float: right;
+    position: relative;
     margin-top: 8px;
-	-webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.15);
-	-moz-box-shadow: 0 1px 1px rgba(0,0,0,0.15);
-	box-shadow: 0 1px 1px rgba(0,0,0,0.15);
+    -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
+    -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15);
 }
 
- .comment-box:before, .comment-box:after {
-	content: '';
-	height: 0;
-	width: 0;
-	position: absolute;
-	display: block;
-	border-width: 10px 12px 10px 0;
-	border-style: solid;
-	border-color: transparent #FCFCFC;
-	top: 8px;
-	left: -11px;
+.comment-box:before,
+.comment-box:after {
+    content: '';
+    height: 0;
+    width: 0;
+    position: absolute;
+    display: block;
+    border-width: 10px 12px 10px 0;
+    border-style: solid;
+    border-color: transparent #FCFCFC;
+    top: 8px;
+    left: -11px;
 }
 
- .comment-box:before {
-	border-width: 11px 13px 11px 0;
-	border-color: transparent rgba(0,0,0,0.05);
-	left: -12px;
+.comment-box:before {
+    border-width: 11px 13px 11px 0;
+    border-color: transparent rgba(0, 0, 0, 0.05);
+    left: -12px;
 }
 
 /* .reply-list .comment-box {
@@ -391,84 +406,88 @@ button:hover {
 } */
 
 .comment-box .comment-head {
-	background: #FCFCFC;
-	padding: 10px 12px;
+    background: #FCFCFC;
+    padding: 10px 12px;
     height: 35px;
-	border-bottom: 1px solid #E5E5E5;
-	overflow: hidden;
-	-webkit-border-radius: 4px 4px 0 0;
-	-moz-border-radius: 4px 4px 0 0;
-	border-radius: 4px 4px 0 0;
+    border-bottom: 1px solid #E5E5E5;
+    overflow: hidden;
+    -webkit-border-radius: 4px 4px 0 0;
+    -moz-border-radius: 4px 4px 0 0;
+    border-radius: 4px 4px 0 0;
 }
 
 .comment-box .comment-head i {
-	float: right;
-	margin-left: 14px;
-	position: relative;
-	top: 2px;
-	color: #A6A6A6;
-	cursor: pointer;
-	-webkit-transition: color 0.3s ease;
-	-o-transition: color 0.3s ease;
-	transition: color 0.3s ease;
+    float: right;
+    margin-left: 14px;
+    position: relative;
+    top: 2px;
+    color: #A6A6A6;
+    cursor: pointer;
+    -webkit-transition: color 0.3s ease;
+    -o-transition: color 0.3s ease;
+    transition: color 0.3s ease;
 }
 
 .comment-box .comment-head i:hover {
-	color: #03658c;
+    color: #03658c;
 }
 
 .comment-box .comment-name {
-	color: #283035;
-	font-size: 14px;
-	font-weight: 700;
-	float: left;
-	margin-right: 10px;
+    color: #283035;
+    font-size: 14px;
+    font-weight: 700;
+    float: left;
+    margin-right: 10px;
     letter-spacing: 1px;
 }
 
 .comment-box .comment-name a {
-	color: #283035;
+    color: #283035;
     letter-spacing: 1px;
 }
 
 .comment-box .comment-head span {
-	float: left;
-	position: relative;
+    float: left;
+    position: relative;
     background: #038c53;
-	color: #FFF;
-	font-size: 12px;
-	padding: 0px 5px;
-	font-weight: 500;
-    margin-right: 10px; 
+    color: #FFF;
+    font-size: 12px;
+    padding: 0px 5px;
+    font-weight: 500;
+    margin-right: 10px;
     border-radius: 5px;
 }
 
 .comment-box .comment-content {
-	background: #FFF;
-	padding: 12px;
-	font-size: 15px;
-	color: #595959;
+    background: #FFF;
+    padding: 12px;
+    font-size: 15px;
+    color: #595959;
     width: 100%;
     border: 0;
     outline: none;
-	-webkit-border-radius: 0 0 4px 4px;
-	-moz-border-radius: 0 0 4px 4px;
-	border-radius: 0 0 4px 4px;
+    -webkit-border-radius: 0 0 4px 4px;
+    -moz-border-radius: 0 0 4px 4px;
+    border-radius: 0 0 4px 4px;
 }
 
-.comment-box .comment-name.by-author, .comment-box .comment-name.by-author a {color: #038c53;}
+.comment-box .comment-name.by-author,
+.comment-box .comment-name.by-author a {
+    color: #038c53;
+}
+
 .comment-box .comment-name.by-author:after {
-	/* content: 'Criando em:'; */
-	background: #038c53;
-	color: #FFF;
-	font-size: 12px;
-	padding: 3px 5px;
-	font-weight: 500;
-	margin-left: 5px;
-	-webkit-border-radius: 3px;
-	-moz-border-radius: 3px;
-	border-radius: 3px;
-   
+    /* content: 'Criando em:'; */
+    background: #038c53;
+    color: #FFF;
+    font-size: 12px;
+    padding: 3px 5px;
+    font-weight: 500;
+    margin-left: 5px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+
 }
 
 .comment-conteiner {
@@ -482,17 +501,17 @@ button:hover {
  * Responsive
  ========================*/
 @media only screen and (max-width: 766px) {
-	.comments-container {
-		width: 480px;
-	}
+    .comments-container {
+        width: 480px;
+    }
 
-	.comments-list .comment-box {
-		width: 390px;
-	}
+    .comments-list .comment-box {
+        width: 390px;
+    }
 
-	.reply-list .comment-box {
-		width: 320px;
-	}
+    .reply-list .comment-box {
+        width: 320px;
+    }
 }
 
 .file-contianer {
@@ -530,7 +549,7 @@ button:hover {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: flex-start;    
+    align-items: flex-start;
     width: 100%;
     margin-bottom: -15px;
 }
@@ -552,17 +571,76 @@ button:hover {
     justify-content: space-around;
     align-items: center;
 }
- 
 
-.file-buttons > a, button {
-   border: none;
-   border-bottom: solid 1px grey;
-   cursor: pointer;
-   background-color: transparent;
-   color: #000;
+
+.file-buttons>a,
+button {
+    border: none;
+    border-bottom: solid 1px grey;
+    cursor: pointer;
+    background-color: transparent;
+    color: #000;
 }
 
-.file-buttons > a:hover , button:hover {
+.file-buttons>a:hover,
+button:hover {
     box-shadow: none;
     color: rgb(177, 177, 177);
- }
+}
+
+.content-list-task {
+    background-color: #d8d8d8;
+    padding: 5px;
+    margin-top: 5px;
+}
+
+ .card-task {
+    background-color: #fafafa;
+    margin-top: 5px;
+    border-bottom: 1px solid rgb(214, 214, 214);
+    height: 2rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 5px;
+    padding-right: 5px;
+   }
+
+   .task-name {
+    background-color: red;
+    width: 70%;
+   }
+
+.title-list-task {
+    margin-bottom: -10px;
+}
+
+.title-list-task h1{
+    font-size: 1.3em;
+    font-weight: 500;
+}
+
+.title-task label {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+.title-task h3 {
+    font-size: 1em;
+    
+}
+
+.complete {
+   text-decoration: line-through;
+}
+.button-tasks {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 30%;
+    padding-left: 5px;
+    padding-right: 5px;
+}
