--- a/src/app/pages/info-home/info-home.component.html
+++ b/src/app/pages/info-home/info-home.component.html
@@ -1,60 +1,64 @@
 <div class="container">
-    <div class="buttonsAction">
-        <div class="search">
-            <label for="search">Pesquisa</label>
-            <input type="text" name="search" id="" (input)="searchs($event)">
-        </div>
-        <div class="new">
-            <input type="button" value="+ Adicionar" routerLink="/newCard">
-        </div>
+  <div class="buttonsAction">
+    <div class="search">
+      <label for="search">Pesquisa</label>
+      <input type="text" name="search" id="" (input)="searchs($event)">
     </div>
-    
-    <!-- Tabela -->
-    <div class="tableSection">
-        <section>
-            <div class="tbl-header">
-              <table cellpadding="0" cellspacing="0">
-                <thead class="thead">
-                  <tr>
-                    <th>Código</th>
-                    <th>Cartão</th>
-                    <th>Lista</th>                    
-                    <th>Data de Entrega</th>
-                    <th>ações</th>
-                  </tr>
-                </thead>
-              </table>
-            </div>
-            <div class="tbl-content">
-              <table cellpadding="0" cellspacing="0" class="tableBody">
-                <tbody id="tabela-contas" *ngIf="cards; else noProducts">
-                    <tr *ngFor="let card of cards" class="tr">
-                        <td>{{card.code}}</td>
-                        <td>{{card.title}}</td>
-                        <td>{{card.tag}}</td>
-                        <td><span>{{card.delivery_date.toLocaleString('pt-BR').substring(0 ,
-                          10).split('-').reverse().join('/')}}</span></td>                       
-                        <td class="action">
-                            <button type="button"  class="edit" routerLink="card/edit/{{card._id}}">
-                              <fa-icon [icon]="editIcon"></fa-icon>
-                            </button>
-                            <button type="button"  class="exclui" (click)="remove(card._id)">
-                              <fa-icon [icon]="removeIcon"></fa-icon>
-                            </button>                         
-                            <button type="button"  class="view" routerLink="card/view/{{card._id}}">
-                              <fa-icon [icon]="vewIcon"></fa-icon>
-                            </button>                         
-                        </td>                    
-                    </tr>                    
-                </tbody>
-              </table>              
-            </div>
-          </section>
+    <div class="new">
+      <input type="button" value="+ Adicionar" routerLink="/newCard">
     </div>
-    <div class="footerProduct">
-        <h3 clas>Total de Cartões cadastrados: {{totalP}}</h3>        
-    </div>
-    <ng-template #noProducts>
-      <h1>Carregando...</h1>
-    </ng-template>
+  </div>
+
+  <!-- Tabela -->
+  <div class="tableSection">
+    <section>
+      <div class="tbl-header">
+        <table cellpadding="0" cellspacing="0">
+          <thead class="thead">
+            <tr>
+              <th>Código</th>
+              <th>Cartão</th>
+              <th>Lista</th>
+              <th>Data de Entrega</th>
+              <th>ações</th>
+            </tr>
+          </thead>
+        </table>
+      </div>
+      <div class="tbl-content">
+        <table cellpadding="0" cellspacing="0" class="tableBody">
+          <tbody id="tabela-contas" *ngIf="cards; else noProducts">
+            <tr *ngFor="let card of cards" class="tr">
+              <td>{{card.code}}</td>
+              <td>{{card.title}}</td>
+              <td>{{card.tag}}</td>
+              <td *ngIf="card.delivery_date; else noDate"><span>{{card.delivery_date.toLocaleString('pt-BR').substring(0
+                  ,
+                  10).split('-').reverse().join('/')}}</span></td>
+              <ng-template #noDate>
+                <td><span>00/00/00</span></td>
+              </ng-template>
+              <td class="action">
+                <button type="button" class="edit" routerLink="card/edit/{{card._id}}">
+                  <fa-icon [icon]="editIcon"></fa-icon>
+                </button>
+                <button type="button" class="exclui" (click)="remove(card._id)">
+                  <fa-icon [icon]="removeIcon"></fa-icon>
+                </button>
+                <button type="button" class="view" routerLink="card/view/{{card._id}}">
+                  <fa-icon [icon]="vewIcon"></fa-icon>
+                </button>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </section>
+  </div>
+  <div class="footerProduct">
+    <h3 clas>Total de Cartões cadastrados: {{totalP}}</h3>
+  </div>
+  <ng-template #noProducts>
+    <h1>Carregando...</h1>
+  </ng-template>
 </div>
