--- a/src/app/pages/info-home/info-home.component.html
+++ b/src/app/pages/info-home/info-home.component.html
@@ -36,7 +36,7 @@
                   ,
                   10).split('-').reverse().join('/')}}</span></td>
               <ng-template #noDate>
-                <td><span>00/00/00</span></td>
+                <td><span>--/--/--</span></td>
               </ng-template>
               <td class="action">
                 <button type="button" class="edit" routerLink="card/edit/{{card._id}}">
