--- a/src/app/pages/create-account/create-account.component.html
+++ b/src/app/pages/create-account/create-account.component.html
@@ -13,6 +13,7 @@
         <!-- ngModel pega os value dos campos pelo campo name -->
         <!-- utilizando no formato [(ngModel)] podemos pegar um valor de uma váriavel e atribuir ao input -->
         <input type="text" name="name" placeholder="Nome" id="nome" formControlName="name" required/>
+        <input type="text" name="sname" placeholder="Sobre nome" id="snome" formControlName="sname" required/>
         <!-- email no final é o pattern para o email -->
         <!-- <div>{{nome.className}}</div> -->
         <input type="email" name="email" placeholder="E-mail" id="email"   formControlName="email" required email />
