--- a/src/app/pages/info-home/info-home.component.html
+++ b/src/app/pages/info-home/info-home.component.html
@@ -46,6 +46,7 @@
                   <fa-icon [icon]="removeIcon"></fa-icon>
                 </button>
                 <button type="button" class="view" routerLink="card/view/{{card._id}}">
+                <!-- <button type="button" class="view" (click)="openDialogMember('400ms', '400ms')"> -->
                   <fa-icon [icon]="vewIcon"></fa-icon>
                 </button>
               </td>
